--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "nice-react-layout": "^0.8.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "tailwindcss": "^1.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
